@@ -6,7 +6,7 @@ copyright_year   = 2012
 version          = 1.93
 
 [@Author::Plicease]
-:version = 2.10
+:version = 2.20
 release_tests = 1
 
 [RemovePrereqs]
@@ -21,48 +21,53 @@ Acme::Ford::Prefect                            = 0.038
 Acme::Ford::Prefect2                           = 0.3200
 Acme::Ford::Prefect::FFI                       = 0.28
 Alien                                          = 0.94
-Alien::Base                                    = 0.041
+Alien::autoconf                                = 0.03
+Alien::automake                                = 0.05
+Alien::Base                                    = 0.042
 Alien::Base::ModuleBuild                       = 0.040
-Alien::Base::Wrapper                           = 0.04
+Alien::Base::Wrapper                           = 0.05
 Alien::bison                                   = 0.19
-Alien::Build                                   = 0.36
-Alien::Build::MB                               = 0.02
-Alien::Build::Plugin::Fetch::Cache             = 0.01
+Alien::Build                                   = 0.57
+Alien::Build::MB                               = 0.03
+Alien::Build::Plugin::Fetch::Cache             = 0.02
+Alien::Build::Plugin::Fetch::PromptBeforeDownload = 0.57
+Alien::Build::Plugin::Probe::GnuWin32          = 0.57
 Alien::bz2::Installer                          = 0.05
 Alien::CMake                                   = 0.08
 Alien::curl                                    = 0.06
 Alien::Editline                                = 0.08
 Alien::FFI                                     = 0.16
 Alien::flex                                    = 0.12
-Alien::gmake                                   = 0.19
-Alien::Hunspell                                = 0.08
+Alien::gmake                                   = 0.20
+Alien::Hunspell                                = 0.10
 Alien::Libarchive                              = 0.28
 Alien::Libarchive::Installer                   = 0.15
 Alien::Libarchive3                             = 0.28
 Alien::Libbz2                                  = 0.22
-Alien::libtool24                               = 0.04
+Alien::libtool                                 = 0.04
+Alien::libtool24                               = 0.05
 Alien::LibYAML                                 = 2.01
 Alien::LZO                                     = 0.02
-Alien::m4                                      = 0.09
-Alien::MSYS                                    = 0.07
+Alien::m4                                      = 0.11
+Alien::MSYS                                    = 0.08
 Alien::MSYS2                                   = 0.02
 Alien::nasm                                    = 0.18
 Alien::Nettle                                  = 0.03
-Alien::patch                                   = 0.11
+Alien::patch                                   = 0.12
 Alien::pkgconf                                 = 0.10
 Alien::Libxml2                                 = 0.01
-Alien::xz                                      = 0.04
+Alien::xz                                      = 0.06
 ;Alt::Alien::FFI::System                       = 0.16
 ;Alt::ExtUtils::PkgConfig::PLICEASE            = 1.15
 ;Alt::FFI::libffi                              = 0.01
 AnyEvent::Finger                               = 0.10
-AnyEvent::FTP                                  = 0.09
+AnyEvent::FTP                                  = 0.10
 AnyEvent::Git::Wrapper                         = 0.10
 AnyEvent::Ident                                = 0.07
 AnyEvent::Open3::Simple                        = 0.86
-AnyEvent::WebSocket::Client                    = 0.38
-App::af                                        = 0.09
-App::cpangitify                                = 0.12
+AnyEvent::WebSocket::Client                    = 0.39
+App::af                                        = 0.11
+App::cpangitify                                = 0.14
 App::pwhich                                    = 1.14
 App::palien                                    = 0.03
 App::RegexFileUtils                            = 0.07
@@ -77,19 +82,19 @@ Clustericious                                  = 1.24
 Clustericious::Coder::BSON                     = 0.01
 Clustericious::Admin                           = 1.09
 Dist::Zilla::App::Command::aliendeps           = 0.03
-Dist::Zilla::Plugin::AlienBuild                = 0.16
+Dist::Zilla::Plugin::AlienBuild                = 0.20
 Dist::Zilla::Plugin::Alt                       = 0.04
-Dist::Zilla::Plugin::Author::Plicease          = 2.12
+Dist::Zilla::Plugin::Author::Plicease          = 2.20
 Dist::Zilla::Plugin::CSS::Compressor           = 0.02
 Dist::Zilla::Plugin::InsertExample             = 0.07
 Dist::Zilla::Plugin::JavaScript::Minifier      = 0.02
 Dist::Zilla::Plugin::jQuery                    = 0.04
 Dist::Zilla::Plugin::MathInt64                 = 0.09
-Dist::Zilla::Plugin::OurPkgVersion             = 0.10
+Dist::Zilla::Plugin::OurPkgVersion             = 0.12
 Dist::Zilla::Plugin::Template::Tiny            = 0.04
 Dist::Zilla::Plugin::Test::Version             = 1.09
 Dist::Zilla::Plugin::TextTabs                  = 0.03
-Dist::Zilla::PluginBundle::Author::Plicease    = 2.12
+Dist::Zilla::PluginBundle::Author::Plicease    = 2.20
 Env::ShellWords                                = 0.01
 FFI                                            = 1.10
 FFI::CheckLib                                  = 0.15
@@ -127,7 +132,6 @@ Shell::Config::Generate                        = 0.26
 Shell::Guess                                   = 0.06
 String::Template                               = 0.19
 Term::EditLine                                 = 0.11
-Test::Alien                                    = 0.14
 Test::CChecker                                 = 0.08
 Test::Clustericious::Blocking                  = 0.04
 Test::Clustericious::Cluster                   = 0.35
@@ -146,7 +150,7 @@ Win32::Process::Info                           = 1.022
 Win32::Shortcut::Readlink                      = 0.02
 Win32API::ProcessStatus                        = 0.05
 WWW::Bugzilla::BugTree                         = 0.07
-Yars                                           = 1.27
+Yars                                           = 1.28
 Yars::Command::yars_exercise                   = 0.07
 
 App::Ack                                       = 0
