@@ -1,6 +1,13 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Remove Test::Alien
+  - add Alien::autoconf
+  - add Alien::automake
+  - add Alien::Build::Plugin::Fetch::PromptBeforeDownload
+  - add Alien::Build::Plugin::Probe::GnuWin32
+  - add Alien::libtool
+  - Updated my dists to latest
 
 1.93      2017-05-23 10:37:49 -0400
   - Remove Alien::Packages::Cygwin
